--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -12,7 +12,7 @@ header {
     border-radius: 12px;
     padding: 0 17px;
 
-    .logo-navbar {
+    .logo__navbar {
       display: flex;
       align-items: center;
       gap: 70px;
@@ -46,6 +46,31 @@ header {
         border-radius: 50%;
         background-color: $indicator-color;
       }
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  header {
+    margin-bottom: 40px;
+    .container {
+      flex-direction: column;
+      justify-content: center;
+      gap: 20px;
+      padding: 20px 10px;
+    }
+    .logo__navbar {
+      display: block;
+    }
+    nav {
+      display: none;
+    }
+    ul {
+      display: none;
+    }
+    .profile-button {
+      display: none;
+      margin-left: auto;
     }
   }
 }
