--- a/src/scss/hero.scss
+++ b/src/scss/hero.scss
@@ -17,6 +17,7 @@
     }
     .hero-buttons {
       display: flex;
+      flex-wrap: wrap;
       justify-content: center;
       gap: 16px;
       margin-top: 40px;
