--- a/src/scss/typography.scss
+++ b/src/scss/typography.scss
@@ -14,3 +14,14 @@ p {
   margin: 0;
   line-height: 27.9px;
 }
+
+@media (max-width: 768px) {
+  h1 {
+    font-size: 48px;
+    line-height: 58px;
+  }
+  p {
+    font-size: 16px;
+    line-height: 24px;
+  }
+}
