Added Partners and Showcase Sections

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,10 +1,11 @@
-@use "./header.scss";
-@use "./hero.scss";
+@use "./colors.scss" as *;
 @use "./buttons.scss";
 @use "./fonts.scss";
 @use "./typography.scss";
-@use "./colors.scss" as *;
+@use "./header.scss";
+@use "./hero.scss";
 @use "./partners.scss";
+@use "./showcase.scss";
 
 * {
   box-sizing: border-box;
