--- a/src/scss/partners.scss
+++ b/src/scss/partners.scss
@@ -3,38 +3,28 @@
 .partners {
   text-align: center;
   overflow: hidden;
+  margin-bottom: 40px;
 
-  .infinite-looper-wrapper {
-    overflow: hidden;
-
-    width: 100%;
-  }
-
-  .infinite-looper {
+  .partners__content {
     display: flex;
-    gap: 40px;
-    position: absolute;
-    white-space: nowrap;
-    will-change: transform;
-    margin-top: 40px;
-  }
+    flex-direction: column;
 
-  .infinite-looper img {
-    margin-right: 20px;
-    height: 50px;
-    display: flex;
-  }
-
-  .infinite-looper.left {
-    animation: scroll-left linear infinite;
-  }
-
-  @keyframes scroll-left {
-    from {
-      transform: translateX(0);
+    span {
+      margin-bottom: 40px;
     }
-    to {
-      transform: translateX(-100%);
+
+    .partners__images {
+      display: flex;
+      white-space: nowrap;
+      padding: 0 20px;
+
+      .partner__logo {
+        img {
+          flex-shrink: 0;
+          width: 200px;
+          max-width: fit-content;
+        }
+      }
     }
   }
 }
