--- a/src/scss/typography.scss
+++ b/src/scss/typography.scss
@@ -9,6 +9,13 @@ h1 {
   line-height: 98px;
 }
 
+h2 {
+  font-size: 64px;
+  letter-spacing: -3.52px;
+  margin: 0;
+  line-height: 74px;
+}
+
 p {
   letter-spacing: -0.36px;
   margin: 0;
