Cases & FAQ sections added

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,6 +8,8 @@
 @use "./partners.scss";
 @use "./showcase.scss";
 @use "./story.scss";
+@use "./cases.scss";
+@use "./faq.scss";
 
 * {
   box-sizing: border-box;
