--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -1,5 +1,8 @@
 $white: #ffffff;
+$light-gray: #f7f7f7;
+$dark-gray: #fafafa;
 $black: #0b0b0b;
 $border-color: #e8eaed;
 $indicator-color: #3fdd4a;
 $showcase-bg: #e9e9e9;
+$section-color: #121212;
