Updated & added new section Process, Footer etc.

--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -1,8 +1,12 @@
 $white: #ffffff;
 $light-gray: #f7f7f7;
 $dark-gray: #fafafa;
+$gray: #b8b8b8;
 $black: #0b0b0b;
+$light-black: #1c1c1c;
+$dark-black: #2e2e2e;
 $border-color: #e8eaed;
+$black-border-color: #302f2f;
 $indicator-color: #3fdd4a;
 $showcase-bg: #e9e9e9;
 $section-color: #121212;
