--- a/src/scss/typography.scss
+++ b/src/scss/typography.scss
@@ -16,6 +16,28 @@ h2 {
   line-height: 74px;
 }
 
+h3 {
+  font-size: 40px;
+  letter-spacing: -1.6px;
+  margin: 0;
+  line-height: 48px;
+  font-weight: 500;
+}
+h4 {
+  font-size: 34px;
+  line-height: 31.9px;
+  letter-spacing: -0.96px;
+  font-weight: 500;
+  margin: 0;
+}
+h5 {
+  font-size: 18px;
+  line-height: 27.9px;
+  letter-spacing: -0.36px;
+  font-weight: 300;
+  margin: 0;
+}
+
 p {
   letter-spacing: -0.36px;
   margin: 0;
@@ -26,7 +48,7 @@ p {
   h1 {
     font-size: 40px;
     line-height: 50px;
-    text-wrap: balanced;
+    text-wrap: balance;
   }
   h2 {
     font-size: 44px;
