--- a/src/scss/cases.scss
+++ b/src/scss/cases.scss
@@ -24,7 +24,7 @@
         scroll-snap-align: start;
       }
 
-      .case__grid {
+      .case__body {
         display: grid;
         grid-template-columns: 3fr 2fr;
         text-align: left;
