--- a/src/scss/faq.scss
+++ b/src/scss/faq.scss
@@ -4,4 +4,69 @@
   background-color: $section-color;
   color: $white;
   padding: 100px 0;
+
+  .container {
+    display: flex;
+    gap: 200px;
+  }
+  .faq__header {
+    width: 400px;
+  }
+
+  .faq__content {
+    margin-top: 50px;
+    .faq__card {
+      background-color: $light-black;
+      border: 1px solid $black-border-color;
+      border-radius: 12px;
+      margin-bottom: 24px;
+      padding: 20px;
+
+      h4 {
+        font-size: 24px;
+        font-weight: 500;
+        line-height: 31.9px;
+        letter-spacing: -0.96px;
+        margin-bottom: 20px;
+      }
+      p {
+        font-size: 16px;
+        font-weight: 300;
+        line-height: 25.9px;
+        letter-spacing: -0.36px;
+        color: $gray;
+      }
+    }
+  }
+}
+
+@media (max-width: 1200px) {
+  .faq {
+    .container {
+      display: flex;
+      gap: 100px;
+    }
+  }
+}
+
+@media (max-width: 992px) {
+  .faq {
+    .container {
+      display: block;
+    }
+  }
+}
+
+@media (max-width: 568px) {
+  .faq {
+    .container {
+      .faq__header {
+        width: 100%;
+        h2 {
+          font-size: 10vw;
+          line-height: 12vw;
+        }
+      }
+    }
+  }
 }
