--- a/src/scss/cases.scss
+++ b/src/scss/cases.scss
@@ -4,12 +4,14 @@
   position: relative;
   background-color: $light-gray;
   padding: 100px 0 50px 0;
-
-  .container {
-    text-align: center;
+  .cases__header {
     h2 {
       margin-bottom: 50px;
     }
+  }
+
+  .container {
+    text-align: center;
     .cases__content {
       background-color: $white;
       padding: 34px;
